# security_security_cangjie_wrapper

./: BUILD.gn  README.md  README_zh.md  bundle.json
kit/CryptoArchitectureKit/: BUILD.gn  index.cj
kit/UniversalKeystoreKit/: BUILD.gn  index.cj
mock/: ohos.security.cj  ohos.security.crypto_framework.cj  ohos.security.huks.cj
ohos/ability_access_ctrl/: BUILD.gn  cj_ability_access_ctrl.cj  cj_ability_access_ctrl_error.cj
ohos/security/: BUILD.gn  security.cj
ohos/security/crypto_framework/: BUILD.gn  cipher.cj  cj_crypto_common.cj  cj_crypto_enum.cj  cj_crypto_interface.cj  cj_crypto_log.cj  cj_crypto_native.cj  mac.cj  md.cj  random.cj  sign.cj  sym_key.cj  sym_key_generator.cj
ohos/security/huks/: BUILD.gn  huks_enum.cj  huks_err.cj  huks_ffi.cj  huks_get_sdk_version.cj  huks_key_item.cj  huks_limit.cj  huks_session.cj  huks_struct.cj  huks_struct_ffi.cj
ohos/security/permission_request_result/: BUILD.gn  permission_request_result.cj
test/APILevel21/crypto/test/entry/src/main/cangjie/src/: Test_crypto.cj  ability_stage.cj  main_ability.cj  test_list_crypto.cj
test/APILevel21/crypto/test/hvigor/: hvigor-config.json5
test/APILevel21/security_huks/test/entry/src/main/cangjie/src/: Test_SecurityHuks_Enum.cj  Test_abort_session.cj  Test_aes.cj  Test_anon_attest.cj  Test_attest_key_item.cj  Test_basic_asymmetric.cj  Test_export_key_item.cj  Test_generate_key.cj  Test_import_key.cj  Test_import_wrapped_key_item.cj  Test_key_exchange.cj  Test_session_other.cj  Test_sm2.cj  Test_sm4.cj  Test_struct.cj  Test_struct_ffi.cj  ability_stage.cj  huks_test_utils.cj  test_list_security_huks.cj  unittest_engine.cj
test/APILevel22/security_huks/test/entry/src/main/cangjie/src/: Test_SecurityHuks_Enum.cj  Test_abort_session.cj  Test_aes.cj  Test_anon_attest.cj  Test_delete_key_item.cj  Test_generate_key.cj  Test_get_key_item_properties.cj  Test_import_wrapped_key_item.cj  Test_is_key_item_exist.cj  Test_sm2.cj  Test_sm4.cj  Test_special.cj  Test_struct.cj  Test_struct_ffi.cj  huks_test_utils.cj
test/crypto/test/entry/src/main/cangjie/src/: Test_cipher_missing_add.cj  Test_cipher_operations_add.cj  Test_create_cipher_add.cj  Test_create_mac_add.cj  Test_create_md_add.cj  Test_create_random_add.cj  Test_create_sym_key_generator_add.cj  Test_crypto.cj  Test_mac_missing_add.cj  Test_mac_operations_add.cj  Test_md_missing_add.cj  Test_md_operations_add.cj  Test_random_operations_add.cj  main_ability.cj  test_list_crypto.cj
test/hide_security/test/entry/src/main/cangjie/src/: Test_hide_security.cj  test_list_hide_security.cj
test/security_huks/test/entry/src/main/cangjie/src/: Test_SecurityHuks_Enum.cj  Test_abort_session.cj  Test_aes.cj  Test_anon_attest.cj  Test_basic_asymmetric.cj  Test_delete_key_item.cj  Test_export_key_item.cj  Test_generate_key.cj  Test_get_key_item_properties.cj  Test_huks_key_item_add.cj  Test_huks_key_item_attest_test_add.cj  Test_huks_key_item_delete_add.cj  Test_huks_key_item_export_add.cj  Test_huks_key_item_generate_add.cj  Test_huks_key_item_import_add.cj  Test_huks_key_item_query_add.cj  Test_huks_key_item_wrap_add.cj  Test_huks_session_add.cj  Test_import_key.cj  Test_import_wrapped_key_item.cj  Test_is_key_item_exist.cj  Test_key_exchange.cj  Test_session_other.cj  Test_sm2.cj  Test_sm4.cj  Test_special.cj  Test_struct.cj  Test_struct_ffi.cj  huks_test_utils.cj  test_list_security_huks.cj  unittest_engine.cj
