# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

security_cangjie_wrapper_packages_ohos = [
  "//base/security/security_cangjie_wrapper/ohos/security/huks:ohos.security.huks",
  "//base/security/security_cangjie_wrapper/ohos/security:ohos.security",
  "//base/security/security_cangjie_wrapper/ohos/security/crypto_framework:ohos.security.crypto_framework",
]
security_cangjie_wrapper_packages_kit = [
  "//base/security/security_cangjie_wrapper/kit/CryptoArchitectureKit:kit.CryptoArchitectureKit",
  "//base/security/security_cangjie_wrapper/kit/UniversalKeystoreKit:kit.UniversalKeystoreKit",
]
copy_ohos_cangjie_sdk_api_lib("copy_sdk_security_cangjie_libs") {
  ohos_inputs = security_cangjie_wrapper_packages_ohos
  kit_inputs = security_cangjie_wrapper_packages_kit
}
