# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.ability_access_ctrl") {
  sources = [
    "cj_ability_access_ctrl.cj",
    "cj_ability_access_ctrl_error.cj",
  ]

  cj_deps = [ "../security/permission_request_result:ohos.security.permission_request_result" ]

  cj_external_deps = [
    "ability_cangjie_wrapper:ohos.ability",
    "arkui_cangjie_wrapper:ohos.base",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [ "access_token:cj_ability_access_ctrl_ffi" ]

  subsystem_name = "security"
  part_name = "security_cangjie_wrapper"
  lib_name = "ability_access_ctrl"
}
