# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.crypto") {
  sources = [
    "cipher.cj",
    "cj_crypto_common.cj",
    "cj_crypto_enum.cj",
    "cj_crypto_interface.cj",
    "cj_crypto_log.cj",
    "cj_crypto_native.cj",
    "mac.cj",
    "md.cj",
    "random.cj",
    "sign.cj",
    "sym_key.cj",
    "sym_key_generator.cj",
  ]

  cj_external_deps = [
    "arkui_cangjie_wrapper:ohos.base",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [ "crypto_framework:cj_cryptoframework_ffi" ]

  subsystem_name = "security"
  part_name = "security_cangjie_wrapper"
  lib_name = "ohos.crypto"
}
