# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.security_huks") {
  sources = [
    "huks_enum.cj",
    "huks_err.cj",
    "huks_ffi.cj",
    "huks_get_sdk_version.cj",
    "huks_key_item.cj",
    "huks_limit.cj",
    "huks_session.cj",
    "huks_struct.cj",
    "huks_struct_ffi.cj",
  ]

  cj_external_deps = [
    "arkui_cangjie_api:ohos.base",
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
  ]

  external_deps = [ "huks:cj_huks_ffi" ]

  subsystem_name = "security"
  part_name = "security_cangjie_api"
  lib_name = "ohos.security_huks"
}
